@@ -25,6 +25,7 @@
 * CyberSource: Add rescue for ResponseErrors [curiousepic]
 * AuthorizeNet: Always pass recurringBilling flag if present [curiousepic]
 * S5: Pass order_id to TransactionID [curiousepic]
+* NMI: Set ACH sec_code from options if present [curiousepic]
 
 
 == Version 1.58.0 (March 1, 2016)
